2024-11-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3795.c:
	  Add a regression test for a bug encountered in z88dk.

2024-11-03 Benedikt Freisen <b.freisen AT gmx.net>
	* support/regression/cases/Makefile.in:
	  Tidy up list of excluded test cases.

2024-11-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCpeeph.c:
	  Fix bug #3792.
	* src/SDCCopt.c:
	  Workaround for bug #3793.
	* src/SDCCmain.c:
	  Fix bug #3790.

2024-10-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3791.c:
	  Fix bug #3791.

2024-10-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3788.c:
	  Disable a test that assuems SDCC implementation-defined behaviour for host.
	* src/z80/peeph.def:
	  z80 peephole optimizer rule improvements.
	* src/z80/gen.c:
	  Improve use of information from generalized constant propagation in z80 subtraction code generation.
	* src/SDCCopt.c:
	  Optimize out a few more casts, part of RFE #937.

2024-10-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Fix some mentions of Windows in manual.

2024-10-27 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCast.h,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  support/regression/tests/caseranges.c,
	  support/valdiag/tests/switch.c:
	  Add C2y case range expressions [feature-requests:#947] based on [patches:#313], adapted to match n3370.

2024-10-27 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.lex,
	  src/SDCCglobl.h,
	  src/SDCCmain.c:
	  Add C2y mode in preparation for the first C2y features.

2024-10-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Small improvment in stm8 struct/union parameter passing.

2024-10-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/z80n/mul.s,
	  device/lib/z80n/mulchar.s: