@@ -329,6 +329,7 @@ enum {
   W_IDATA_ABSRANGE              = 299, /* __idata at address out of range */
   W_CASE_RANGE_EMPTY            = 300, /* empty case range specified */
   E_CASE_RANGE_C2Y              = 301, /* case range expressions require C2y or later */
+  E_GENERIC_WITH_TYPENAME_C2Y   = 302, /* generic selection based on a type name requires C2y or later */
 
   /* don't touch this! */
   NUMBER_OF_ERROR_MESSAGES             /* Number of error messages */
